# jake-gl

./: CMakeLists.txt  main.cpp
include/: App.hpp  Renderer.hpp  Utility.hpp
src/: App.cpp  Renderer.cpp  Utility.cpp
